tracking late anc patients

--- a/application/app/views/encounters/anc_visit.rhtml
+++ b/application/app/views/encounters/anc_visit.rhtml
@@ -57,6 +57,8 @@
     <%= hidden_field_tag("encounter_id",  @encounter_id) %>
     <%= hidden_field_tag("editing",       true) %>
   <%end%>
+  
+   <%= hidden_field_tag("late_anc_call",params[:late]) if params[:late].present? %>
 
 	<%= submit_tag 'Finish' %>
 <% end %>
