displaying gestation age

--- a/application/app/views/clinic/ancfollowuplist.rhtml
+++ b/application/app/views/clinic/ancfollowuplist.rhtml
@@ -108,8 +108,9 @@
     <select name="person" id="person">
       <% @follow_ups.each do |person| -%>
         <option value="<%= person.patient_id%>" onmousedown="changeNextButtonText('Select Patient');showPopup('<%= person.patient_id %>')">
+         
           <%= person.given_name -%> (<%= person.family_name_prefix -%>) <%= person.family_name -%>
-          H. Vlg: <%= person.address2 -%>
+          H. Vlg: <%= person.address2 -%> G. Age: <%= person.gestation_age %>
         </option>
       <% end -%>   
     <%= hidden_field_tag("source", "HK") %>
