--- a/application/app/views/clinic/ancfollowuplist.rhtml
+++ b/application/app/views/clinic/ancfollowuplist.rhtml
@@ -42,6 +42,17 @@
 
 <style>
 
+     #vl_lab_trail_cover{
+        position: absolute;
+        background-color: black;
+        width: 100%;
+        height: 102%;
+        left: 0%;
+        top: 0%;
+        z-index: 990;
+        opacity: 0.25;
+      }
+     
       #vl_lab_trail, #new_vl_menu, .new_vl_menu{
       position: absolute;
       width: 95%;
