--- a/application/app/views/encounters/anc_visit.rhtml
+++ b/application/app/views/encounters/anc_visit.rhtml
@@ -60,5 +60,7 @@
   
    <%= hidden_field_tag("late_anc_call",params[:late]) if params[:late].present? %>
 
+   <%= hidden_field_tag("hsa_id",params[:hsa_id]) if params[:hsa_id].present? %>
+
 	<%= submit_tag 'Finish' %>
 <% end %>
