--- a/application/app/views/clinic/ancfollowuplist.rhtml
+++ b/application/app/views/clinic/ancfollowuplist.rhtml
@@ -1,4 +1,5 @@
 <script type="text/javascript">
+	var person_id
   var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
   var tt_cancel_show = "/clinic?status=endcall";
 
@@ -6,13 +7,14 @@
     $('nextButton').innerHTML = "<span>" + text + "</span>";  
   }
   
+  
   function showVlLabTrail(person_id,hsa_id){
    
     c = document.getElementById('content');
-    v = document.getElementById('vl_lab_trail');
+    v = document.getElementById(person_id);
     c.appendChild(v);
     document.getElementById('vl_lab_trail_cover').style.display='inline';
-    document.getElementById('vl_lab_trail').style.display='inline';
+    document.getElementById(person_id).style.display='inline';
     patient_id = document.getElementById('patientId');
     patient_id.setAttribute("value", person_id);
     patient_id.setAttribute("name", hsa_id);
@@ -20,47 +22,20 @@
   }
   
   function showPopup(patient_id,hsa_id){
-   getLastAncEncounter(patient_id);
+   person_id = patient_id;
    showVlLabTrail(patient_id,hsa_id);
   }
   
   function hideVlLabTrail(){
-    v = document.getElementById('vl_lab_trail');
+    v = document.getElementById(person_id);
     document.getElementById('vl_lab_trail_cover').style.display='none';
-    document.getElementById('vl_lab_trail').style.display='none';
+    document.getElementById(person_id).style.display='none';
   }
   
-  function gotoClientResponse(p_id){
+  function gotoClientResponse(){
     var person_id =  document.getElementById('patientId');
     window.location = "/encounters/client_response?patient_id="+ person_id.value + "&hsa_id=" + person_id.name ;
   }
-  
-  
-function getLastAncEncounter(p_id){
-
-  jQuery.ajax({
-     type: "POST",
-     contentType: "application/json; charset=utf-8",
-     url: "/patients/last_anc_encounter",
-     data : JSON.stringify({patient_id: p_id}),
-     dataType: "json",
-     success: function (result) {
-       
-       alert(result[0].given_name + " " + result[0].family_name);
-       document.getElementById('contactDate1').innerHTML = new Date(Date.parse(result[0].encounter_datetime));
-       document.getElementById('contact1').innerHTML = result[0].given_name + " " + result[0].family_name;  
-       document.getElementById('reason1').innerHTML = result[0].reason;
-       
-       document.getElementById('contactDate2').innerHTML = new Date(Date.parse(result[1].encounter_datetime));
-       document.getElementById('contact2').innerHTML = result[1].given_name + " " + result[1].family_name;  
-       document.getElementById('reason2').innerHTML = result[1].reason;        
-    
-     },
-     error: function (){
-        window.alert("something wrong!");
-     }
-    });
- }
   
   
 </script>
@@ -79,7 +54,7 @@ function getLastAncEncounter(p_id){
         opacity: 0.25;
       }
      
-      #vl_lab_trail, #new_vl_menu, .new_vl_menu{
+      .vl_lab_trail, #new_vl_menu, .new_vl_menu{
       position: absolute;
       width: 95%;
       height: 70%;
@@ -148,6 +123,7 @@ function getLastAncEncounter(p_id){
          
           <%= person[:given_name] -%> (<%= person[:family_name_prefix] -%>) <%= person[:family_name] -%>
           H. Vlg: <%= person[:address2] -%> G. Age: <%= person[:gestation_age] -%> G. HSA: <%= person[:hsa_name] -%>
+          Tel: <%= Person.find(person[:patient_id]).get_attribute("Cell Phone Number") -%>
         </option>
       <% end -%>   
     <%= hidden_field_tag("source", "HK") %>
@@ -159,34 +135,37 @@ function getLastAncEncounter(p_id){
 
 </div>
 
-
-<div id="vl_lab_trail" style="display:none;">
+<% @follow_ups.each do |person| %>
+<div id="<%= person[:patient_id] %>"  class="vl_lab_trail" style="display:none;">
         <div id="vl_lab_trail_header">
-          <span style="font-size: 16pt; margin-left: 4.5%;">ANC Follow Up Contacts</span>
+          <span style="font-size: 16pt; margin-left: 4.5%;">Birth Plan Follow Up</span>
         </div>
 
         <div id="vl_lab_trail_content">
           <div style="position: relative; overflow: none; height: 80%;">
           <input type="hidden" id="patientId" value="" name ="" />
           <table cellspacing='0' style="position:absolute; width:94%; top:10%; left: 3%;">
+          <% if person[:visit].blank? %>
+          <tr class="vl_table_header" style="background-color: #A2CD5A; line-height: 2em; font-size: 18px;">
+              <td style="min-width: 130px;"><span><center>No Previous Follow ups</center></span></td>
+            </tr>
+          <% else %>
             <tr class="vl_table_header" style="background-color: #A2CD5A; line-height: 2em; font-size: 18px;">
               <td style="min-width: 130px;"><span><center>Contact Date</center></span></td>
               <td style="min-width: 120px;"><span><center>Contact</center></span></td>
-              <td><span><center>Reason for not Attending/Visiting</center></span></td>
-            </tr>
-          
-            <tr style="line-height: 3em;" class="vl_tbody">
-              <td style="border-left: 1px solid black;"><span id="contactDate1"></span></td>
-              <td><span id="contact1"><center></center></span></td>
-              <td><span id="reason1"><center></center></span></td>
+              <td><span><center>Reason</center></span></td>
             </tr>
             
+             <% person[:visit].each do |visit| %>
             <tr style="line-height: 3em;" class="vl_tbody">
-              <td style="border-left: 1px solid black;"><span id="contactDate2"></span></td>
-              <td><span id="contact2"><center></center></span></td>
-              <td><span id="reason2"><center></center></span></td>
+             
+              <td style="border-left: 1px solid black;"><span><center><%= visit.second %></center></span></td>
+              <td><span><center><%= visit.fourth %>(<%= visit.first.humanize %>)</center></span></td>
+              <td><span><center><%= visit.third %></center></span></td>
+             
             </tr>
-         
+             <% end %>
+           <% end %>
           </table>
           </div>
         </div>
@@ -197,3 +176,4 @@ function getLastAncEncounter(p_id){
         </div>
         
  </div>
+<% end %>
