made client response generic

--- a/application/app/views/clinic/deliveryfollowuplist.rhtml
+++ b/application/app/views/clinic/deliveryfollowuplist.rhtml
@@ -34,7 +34,7 @@
   
   function gotoClientResponse(){
     var person_id =  document.getElementById('patientId');
-    window.location = "/encounters/client_response?patient_id="+ person_id.value + "&hsa_id=" + person_id.name ;
+    window.location = "/encounters/client_response?patient_id="+ person_id.value + "&hsa_id=" + person_id.name + "&followup=delivery";
   }
   
   
