--- a/application/app/views/encounters/client_response.rhtml
+++ b/application/app/views/encounters/client_response.rhtml
@@ -16,6 +16,7 @@
 		{:id => "client_response",
 		 :helptext => "#{visit_helptext}" } %>
 		 
-   <%= hidden_field_tag("hsa_id", (params["hsa_id"] || "")) %>		 
+   <%= hidden_field_tag("hsa_id", (params["hsa_id"] || "")) %>
+   <%= hidden_field_tag("followup", (params["followup"] || "")) %>		 		 
 	<%= submit_tag 'Finish' %>
 <% end %>
