updated the ANC concent number to allow 5 digits

--- a/application/app/views/patients/anc_number.rhtml
+++ b/application/app/views/patients/anc_number.rhtml
@@ -41,8 +41,8 @@
          :id          => "anc_connect_number",
          :helpText    => "#{action} ANC Connect ID",
          :field_type => 'number',
-         :validationRule => "^\\d{4}$",
-          :validationMessage => "You must enter a valid number(four digits)",
+         :validationRule => "^\\d{5}$",
+          :validationMessage => "You must enter a valid number(five digits)",
          :allowFreeText => true,
          :tt_onLoad => "setAttributes();"
        }
