--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -110,7 +110,9 @@
 
     <% if @patient.person.gender.match(/F/i) %>
       <% unless @anc_connect_id.blank? %>
+         <% if show_for_anc_connect(@patient.patient_id) %>
         <div id="anc_connect_number" value="<span onclick= 'gotoANCnumber(<%= @anc_connect_id%>);' class='anc_connect_button'><%=@anc_connect_id%></span>">ANC Connect ID</div>
+         <% end %>
       <% else %>
          <div id="anc_connect_number" value="<span onclick= 'gotoANCnumber()' class='new_anc_connect_button'>New ANC ID</span>">ANC Connect ID</div>
       <% end %>
@@ -167,7 +169,10 @@
         <% if @patient_anc_program.blank? %>
             <option value='/encounters/new/pregnancy_status?patient_id=<%=@patient.id%>&anc_connect_workflow_start=true'>ANC connect</option>
         <% else %>
+        
+        <% if show_for_anc_connect(@patient.patient_id) %>
             <option value='/encounters/edit_pregnacy_encounter?patient_id=<%=@patient.id%>'>Edit ANC connect</option>
+         <% end %>
             <option value='/patients/anc_info?patient_id=<%=@patient.id%>'>ANC info</option>
         <% end %>
       <% end %>
