--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -193,8 +193,8 @@
         <option value='/clinic/followup?person=<%=@patient.id%>&source=PD'>Follow up</option>
     <% end %>
     
-    <% if show_for_anc_connect(@patient.patient_id) && @patient_anc_program.present? %>
-    	<option value="/clinic/district?task=anc&district=<%=session[:district]%>&patient_id=<%=@patient.id%>" ttize="170px">ANC follow up</option>
+    <% if show_for_anc_connect(@patient.patient_id) && @patient_anc_program.present? && @patient_anc_followup %>
+    	<option value="/clinic/district?task=anc&district=<%=session[:district]%>&patient_id=<%=@patient.id%>&source=PD" ttize="170px">ANC follow up</option>
   	<% end %>
   </select>
 </div>
