Removed a bug that was causing endless loop when updating encounters

--- a/application/app/views/patients/anc_info.rhtml
+++ b/application/app/views/patients/anc_info.rhtml
@@ -12,5 +12,7 @@
     } %>
 
   <%= hidden_field_tag :patient_id, params[:patient_id] %>
-  
+  <% if params[:visit] %>
+    <%= hidden_field_tag :visit, 'hsa' %>
+  <% end %>
 </form>
