--- a/application/app/views/encounters/anc_visit.rhtml
+++ b/application/app/views/encounters/anc_visit.rhtml
@@ -61,6 +61,8 @@
    <%= hidden_field_tag("late_anc_call",params[:late]) if params[:late].present? %>
 
    <%= hidden_field_tag("hsa_id",params[:hsa_id]) if params[:hsa_id].present? %>
+   
+   <%= hidden_field_tag("visit",params[:visit]) if params[:visit].present? %>
 
 	<%= submit_tag 'Finish' %>
 <% end %>
