--- a/application/app/views/encounters/hsa_response.rhtml
+++ b/application/app/views/encounters/hsa_response.rhtml
@@ -17,6 +17,7 @@
 		{:id => "client_response",
 		 :helptext => "#{visit_helptext}" } %> 
    <%= hidden_field_tag("hsa_id", (params["hsa_id"] || "")) %>
-   <%= hidden_field_tag("followup", (params["followup"] || "")) %>	
+   <%= hidden_field_tag("followup", (params["followup"] || "")) %>
+   <%= hidden_field_tag("late", (params["late"] || "")) %>		
 	<%= submit_tag 'Finish' %>
 <% end %>
