--- a/application/app/views/report/anc_connect_clients.rhtml
+++ b/application/app/views/report/anc_connect_clients.rhtml
@@ -8,7 +8,7 @@
     <%= javascript_include_tag("jquery.table2CSV.min") %>
     <script>
       function eportToCSV(){
-         $('#anc_connect_clients').table2CSV({header:['First Name','Last Name','Date of Birth','Cellphone Number','Home Village']})
+         $('#anc_connect_clients').table2CSV()
       }
     </script>
   </head>
@@ -36,9 +36,16 @@
         <tr>
           <td colspan = 5><%= "Filter Info: Grouping - #{@grouping.capitalize} "%></td>
         </tr>
+        <tr>
+          <td><b>First Name</b></td>
+          <td><b>Last Name</b></td>
+          <td><b>Date of Birth</b></td>
+          <td><b>Cell phone number</b></td>
+          <td><b>Home Village</b></td>
+        </tr>
         <%@report.reverse.map do |dates, values|%>
           <tr>
-            <td width="25%" colspan = 5 class="cellleft cellbottom main-table-cell" style="background-color:ddd; text-align:center;font-weight: bold; font-size: large; font-style: italic;"><%= @grouping.humanize + " beginning "+ dates[:start_date] + " ending " + dates[:end_date]%></td>
+            <td width="25%" colspan = 5 class="cellleft cellbottom main-table-cell" style="background-color:ddd; text-align:center;font-weight: bold; font-size: large; font-style: italic;"><%= @grouping.humanize + " beginning "+ dates[:start_date].to_date.strftime("%d-%b-%Y") + " ending " + dates[:end_date].to_date.strftime("%d-%b-%Y")%></td>
           </tr>
           <% values.each do |v| %>
           <tr>
