added date validation

--- a/application/app/views/encounters/delivery.rhtml
+++ b/application/app/views/encounters/delivery.rhtml
@@ -24,7 +24,10 @@
         { :id => "delivery_date",
           :field_type => "date",
           :helptext => "Delivery Date?",
-          :condition => "$('delivered').value == 'Yes'"} %>		 
+          :condition => "$('delivered').value == 'Yes'",
+          :absoluteMin => "#{session_date.advance(:months => -2, :days => -1 ).strftime('%Y-%m-%d')}", 
+          :absoluteMax => "#{session_date.strftime('%Y-%m-%d')}"
+          %>} %>		 
   
   <%= touch_select_tag "DELIVERY LOCATION", @patient, options_for_select([' ', 'Home', 'Facility','En route']),
 		{:id => "delivery_location",
